--- a/introduction/index.html
+++ b/introduction/index.html
@@ -4,10 +4,28 @@
 <title>WEBPROG IT241</title>
 </head>
 <body>
- 
-<h1>My First WEBPROG Heading</h1>
-<p>Hello World! </p>
-<p> I saw a rainbow this morning. </p>
- 
+
+<h1> My Personal Profile Web page - John Michael Corpuz </h1>
+<p>
+About Me<br>
+ ( Do not include birthdate / age / contact information)<br>
+Education / Achievements<br>
+ ASIA PACIFIC COLLEGE BS Computer Science <br>
+ <br>
+Course <br>
+IT Experience<br>
+  SSCI<br>
+ Decision Systems Inc<br>
+ Compuware Corporation<br>
+Hobbies & Interests<br>
+ - I play the Piano <br>
+ - I like to play videogames <br>
+Goals In Life / Dream<br>
+ - Yes <br>
+ <br>
+Picture Gallery<br>
+ <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgametora.com%2Fumamusume%2Fsupports%2F30028-kitasan-black&psig=AOvVaw2isP22ilCw3aV-UPfdFNAm&ust=1764167609119000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMiV3_TBjZEDFQAAAAAdAAAAABAE" alt="Girl with a jacket" width="500" height="600">
+</p>
+
 </body>
 </html>
