--- a/introduction/index.html
+++ b/introduction/index.html
@@ -24,7 +24,7 @@ Goals In Life / Dream<br>
  - Yes <br>
  <br>
 Picture Gallery<br>
- <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgametora.com%2Fumamusume%2Fsupports%2F30028-kitasan-black&psig=AOvVaw2isP22ilCw3aV-UPfdFNAm&ust=1764167609119000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMiV3_TBjZEDFQAAAAAdAAAAABAE" alt="Girl with a jacket" width="500" height="600">
+ <img src="https://gametora.com/images/umamusume/supports/tex_support_card_30028.png" alt="Girl with a jacket" width="500" height="600">
 </p>
 
 </body>
