--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css/mystyle.css">
-<title>Page Title</title>
+  <title>WEBPROG IT241</title>
 </head>
 <body>
- 
-<h1>WEBPROG IT241 </h1>
-<p>
- 
-About Me<br>
-( Do not include birthdate / age / contact information)<br>
-Education / Achievements<br>
-Course <br>
-IT Experience<br>
-Hobbies & Interests<br>
-Goals In Life / Dream<br>
-Picture Gallery<br>
- 
-</p>
-<h2>The alt Attribute</h2>
-<p>The alt attribute should reflect the image content, so users who cannot see the image get an understanding of what the image contains:</p>
- 
-<img src="https://ichef.bbci.co.uk/news/800/cpsprodpb/F1F2/production/_118283916_b19c5a1f-162b-410b-8169-f58f0d153752.jpg.webp%22 width="500" height="600">
- 
- 
- 
+
+  <h1>My Personal Profile Web Page - John Michael Corpuz</h1>
+
+  <h2>About Me</h2>
+  <p>(Do not include birthdate / age / contact information)</p>
+
+  <h2>Education / Achievements</h2>
+  <p>ASIA PACIFIC COLLEGE – BS Computer Science</p>
+
+  <h2>Course</h2>
+  <p>IT Experience:</p>
+  <ul>
+    <li>SSCI</li>
+    <li>Decision Systems Inc</li>
+    <li>Compuware Corporation</li>
+  </ul>
+
+  <h2>Hobbies & Interests</h2>
+  <ul>
+    <li>I play the piano</li>
+    <li>I like to play video games</li>
+  </ul>
+
+  <h2>Goals in Life / Dream</h2>
+  <p>Yes</p>
+
+  <h2>Picture Gallery</h2>
+  <img src="https://gametora.com/images/umamusume/supports/tex_support_card_30028.png" alt="Girl with a jacket" width="500" height="600">
+
 </body>
 </html>
