--- a/introduction/index.html
+++ b/introduction/index.html
@@ -2,36 +2,93 @@
 <html>
 <head>
   <title>WEBPROG IT241</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: #f4f4f9;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+    }
+
+    .section {
+      flex: 1 1 300px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+    }
+
+    .gallery img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
 
   <h1>My Personal Profile Web Page - John Michael Corpuz</h1>
 
-  <h2>About Me</h2>
-  <p>(Do not include birthdate / age / contact information)</p>
+  <div class="container">
+    <div class="section">
+      <h2>About Me</h2>
+      <p></p>
+    </div>
 
-  <h2>Education / Achievements</h2>
-  <p>ASIA PACIFIC COLLEGE – BS Computer Science</p>
+    <div class="section">
+      <h2>Education / Achievements</h2>
+      <p>ASIA PACIFIC COLLEGE – BS Computer Science</p>
+    </div>
 
-  <h2>Course</h2>
-  <p>IT Experience:</p>
-  <ul>
-    <li>SSCI</li>
-    <li>Decision Systems Inc</li>
-    <li>Compuware Corporation</li>
-  </ul>
+    <div class="section">
+      <h2>Course</h2>
+      <p>IT Experience:</p>
+      <ul>
+        <li>SSCI</li>
+        <li>Decision Systems Inc</li>
+        <li>Compuware Corporation</li>
+      </ul>
+    </div>
 
-  <h2>Hobbies & Interests</h2>
-  <ul>
-    <li>I play the piano</li>
-    <li>I like to play video games</li>
-  </ul>
+    <div class="section">
+      <h2>Hobbies & Interests</h2>
+      <ul>
+        <li>I play the piano</li>
+        <li>I like to play video games</li>
+      </ul>
+    </div>
 
-  <h2>Goals in Life / Dream</h2>
-  <p>Yes</p>
+    <div class="section">
+      <h2>Goals in Life / Dream</h2>
+      <p>Yes</p>
+    </div>
 
-  <h2>Picture Gallery</h2>
-  <img src="https://gametora.com/images/umamusume/supports/tex_support_card_30028.png" alt="Girl with a jacket" width="500" height="600">
+    <div class="section">
+      <h2>Picture Gallery</h2>
+      <div class="gallery">
+        <img src="https://gametora.com/images/umamusume/supports/tex_support_card_30028.png" alt="Girl with a jacket" width="300">
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
