--- a/introduction/index.html
+++ b/introduction/index.html
@@ -31,7 +31,18 @@
   <p>Yes</p>
 
   <h2>Picture Gallery</h2>
-  <img src="https://gametora.com/images/umamusume/supports/tex_support_card_30028.png" alt="Girl with a jacket" width="500" height="600">
+  <p>
+   <img src="https://gametora.com/images/umamusume/supports/tex_support_card_30028.png" alt="Girl with a jacket" width="500" height="600">
+  </p>
+
+<div class="container">
+<div>1</div>
+<div>2</div>
+<div>3</div>  
+<div>4</div>
+<div>5</div>
+<div>6</div>  
+</div>
 
 </body>
 </html>
