--- a/introduction/index.html
+++ b/introduction/index.html
@@ -39,12 +39,12 @@
   </p>
 
 <div class="container">
-<div>1</div>
-<div>2</div>
-<div>3</div>  
-<div>4</div>
-<div>5</div>
-<div>6</div>  
+<div>about me</div>
+<div>I enjoy videogames</div>
+<div>I like to play music</div>  
+<div>I'm running</div>
+<div>out of stuff</div>
+<div>to put here lmao</div>  
 </div>
 
 </body>
