oguri thing content

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -52,10 +52,10 @@
 </div>
  
 <div class="content">
-<h1>The City</h1>
-<p>Chania is the capital of the Chania region on the island of Crete.</p>
-<p>The city can be divided in two parts, the old town and the modern city. The old town is situated next to the old harbour and is the matrix around which the whole urban area was developed.</p>
-<p>Chania lies along the north west coast of the island Crete.</p>
+<h1>Oguri Cap</h1>
+<p>Oguri Cap is an Ashen haired Umamusume who stars in the Netflix Spin off show of Umamusume called "Cinderella Gray".</p>
+<p>The story revolves around Oguri's rise to fame from a small hometown hero in kasamatsu to a worldwide sensational runner facing all the big leagues in the National teams of Tracen Academy.</p>
+<p>Oguri Cap is originally from Kasamatsu .</p>
 </div>  
  
 <div class="facts">
