--- a/introduction/index.html
+++ b/introduction/index.html
@@ -2,17 +2,26 @@
 <html>
 <head>
   <title>UMAMUSUME OGURI GUIDE</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
+  <div class="container">
   <h1>Welcome to my Oguri Cap guide for Umamusume: Pretty Derby!</h1>
-
   <h2>Race Guides</h2>
   <p>Oguri has an A aptitude in both Pace and Late, 
     it's better to run her as a Pace chaser with maxxing out her 
     speed and having at least an A or S rank in Stamina
     
   </p>
+</div>
+
+
+  
+  
   </br>
   <h2>Support Cards</h2>
   <p>Kitasan Black SSR MLB is an absolute MUST when playing any racer who 
