added about me text

--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -134,8 +134,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">HERE IS ABOUT ME LEFT</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">RIGHT!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Hello, I am John Michael Corpuz, a Student at Asia Pacific College. Currently in his second year trying to survive the horrors that is coding, website creation, and all the other stuff that Computer Scientists have to go through in order to Graduate.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">MAN this coding stuff is really messing with my head, I've never seen so many lines of code it's driving me completely insane, BUT WE STAY WINNING THO WE GOT THIS GANG. </p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
