--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -176,9 +176,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            Asia Pacific College
                             <br />
-                            Clark, MO 65243
+                            APC Magallanes
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -191,9 +191,9 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                        <h4 class="text-uppercase mb-4">About My Grade</h4>
                         <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
+                            HOPEFULLY a passing grade 
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
@@ -203,7 +203,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2023</small></div>
+            <div class="container"><small>Copyright &copy; JimboJamboree</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
